# new_has_scraper

./: .gitignore  2021ssd.xlsx  Cargo.toml  Hrvatski Atletski Savez.html  README.md  magicnumbers.csv
Podaci/Mlade juniorke/: mjw06.htm.csv  mjw07.htm.csv  mjw08.htm.csv  mjw09.htm.csv  mjw09d.htm.csv  mjw10.htm.csv  mjw10d.htm.csv  mjw11.htm.csv  mjw11d.htm.csv  mjw12.htm.csv  mjw12d.htm.csv  mjw13.htm.csv  mjw13d.htm.csv  mjw14.htm.csv  mjw14d.htm.csv  mjw15.htm.csv  mjw15d.htm.csv  mjw16.htm.csv  mjw16d.htm.csv  mjw17.html.csv  mjw17d.html.csv  mjw18.html.csv  mjw18d.html.csv  mjw19.html.csv  mjw19d.html.csv  mjw20.html.csv  mjw20d.html.csv  mjw21d.html.csv
Podaci/Mlade kadetkinje/: mdw16.htm.csv  mdw16d.htm.csv  mdw17.html.csv  mdw17d.html.csv  mdw18.html.csv  mdw18d.html.csv  mdw19.html.csv  mdw19d.html.csv  mdw20.html.csv  mdw20d.html.csv
Podaci/Mlade seniorke/: msw06.htm.csv  msw07.htm.csv  msw08.htm.csv  msw09.htm.csv  msw10.htm.csv  msw11.htm.csv  msw12.htm.csv  msw13.htm.csv  msw14.htm.csv  msw15.htm.csv  msw16.htm.csv  msw17.html.csv  msw18.html.csv  msw19.html.csv  msw20.html.csv
Podaci/Mladi juniori/: mjm06.htm.csv  mjm07.htm.csv  mjm08.htm.csv  mjm09.htm.csv  mjm09d.htm.csv  mjm10.htm.csv  mjm10d.htm.csv  mjm11.htm.csv  mjm11d.htm.csv  mjm12.htm.csv  mjm12d.htm.csv  mjm13.htm.csv  mjm13d.htm.csv  mjm14.htm.csv  mjm14d.htm.csv  mjm15.htm.csv  mjm15d.htm.csv  mjm16.htm.csv  mjm16d.htm.csv  mjm17.html.csv  mjm17d.html.csv  mjm18.html.csv  mjm18d.html.csv  mjm19.html.csv  mjm19d.html.csv  mjm20.html.csv  (+2 more)
src/: magicnumbers.csv  main.rs  test.csv
(+569 files in other folders)
