[package]
name = "new_has_scraper"
version = "3.0.0"
authors = ["Tomislav Mikić <tmikic100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
lazy_static = "1.4.0"
regex = "1"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
scraper = "0.12.0"
term-table = "1.3.0"
indicatif = "0.16.2"